# RailPway_Technical

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: README.md
.github/ISSUE_TEMPLATE/: README.md
.github/workflows/: README.md
docs/: README.md
docs/API/: README.md
docs/Architecture/: README.md
docs/DeveloperGuide/: README.md
docs/Screenshots/: README.md
docs/UserGuide/: README.md
handbook/: README.md
handbook/config/: chapter_index.xlsx  glossary.xlsx  handbook_config.xlsx  image_manifest.xlsx  references.xlsx  revision_history.xlsx  settings.yaml  table_manifest.xlsx
handbook/diagrams/: README.md
handbook/images/: README.md
handbook/templates/: README.md
handbook/text/: README.md
image_library/: README.md
image_library/Attribution/: README.md
image_library/Diagrams/: README.md
image_library/Icons/: README.md
image_library/Logos/: README.md
image_library/Photos/: README.md
output/: README.md
output/DOCX/: README.md
output/EPUB/: README.md
output/HTML/: README.md
output/PDF/: README.md
references/: README.md
references/IRPWM/: README.md
references/IRS/: README.md
references/RDSO/: README.md
references/Tender/: README.md
references/USSOR/: README.md
src/: README.md  create_repository_structure.py  main.py
src/assemblers/: README.md
src/core/: Constants.py  README.md  __init__.py  config_manager.py  excel_manager.py  logger.py  sqlite_manager.py
src/database/: README.md
src/generators/: README.md  (+1 more)
tests/: README.md  test_constants.py  test_logger.py
(+4 files in other folders)
